# monexo-ecash

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  Readme.md  docker-compose.yml  entrypoint.sh  justfile  mint.md  sqlx.md  wallet.md
.github/workflows/: audit.yml  rust.yml
.sqlx/: query-3500214ecc9f37719ce47bf3412855e60e14b17464a739e620e3d51527bc2556.json  query-50d323a0445d36af3d06bcaa16ddc893304812d6be987cf2c1430defb239881e.json  query-7d998b640ad33b5a317b774cd708a148027ba1bb42f234774295cda2af2ff97a.json  query-8d6572ce45058a9267c82526aa158cc7dde11cca60630d13b5db4ffc208254c8.json  query-a824c7d97557febf92b30f68aba6f3709fbff28da43b391f9bba1e00f125bfe3.json  query-c26efc5f7b67835f7a3480a899d5e87ad30495964ca7cf88b46f47cf4d5944d2.json  query-ecc94ede60879d5fc47a2de4741f43ad6f4310f403bc87c8e110cbeb2dbb4d11.json
migrations/: 20230530061910_init.sql  20231213080237_init.sql
monexo-cli/: Cargo.toml  Readme.md
monexo-cli/src/: cli.rs
monexo-core/: Cargo.toml
monexo-core/src/: amount.rs  blind.rs  dhke.rs  error.rs  keyset.rs  lib.rs  primitives.rs  proof.rs
monexo-core/src/fixtures/: nutshell_mint_info.json  token_no_pad60.cashu
monexo-mint/: Cargo.toml
monexo-mint/.sqlx/: query-3e75ad36acac74cff0d47bdd806c2c2047274d349970d8f3f9b0be7ae1187995.json  query-6a53568e71a87300ab7a4c2e3f7aab8cb9ed404755753615c944a435cb8eda7f.json  query-96ef0872337b1b3628d0623457fece4e7c6bf675c27cc15cb6f12a5429e217a1.json  query-a10f2e2a43007c7de51b84f1f686f8746fdb8226e2798732c2855391e92e26c4.json  query-e71671e6316519a3197fb7f3f52bb8558c5ecbcd7cc7507f0f4c5954f9949429.json
monexo-mint/migrations/: 20231213080237_init.sql
monexo-mint/src/: config.rs  error.rs  lib.rs  mint.rs  server.rs  verification.rs
monexo-mint/src/database/: mod.rs  postgres.rs
monexo-mint/src/fixtures/: post_swap_request_64_20.json  post_swap_request_duplicate_key.json
monexo-mint/src/routes/: btconchain.rs  default.rs  exchange.rs  mod.rs  onchain.rs
monexo-wallet/: Readme.md
monexo-wallet/.sqlx/: query-2a6c97e80a169b671a2a968fb43d233b0d0118951573984e3ec4a14cc9652f6d.json
monexo-wallet/migrations/: 20230530061900_init.sql
monexo-wallet/src/: config_path.rs  error.rs  wallet.rs
monexo-wallet/src/client/: crossplatform.rs  mod.rs
monexo-wallet/src/fixtures/: post_swap_response_24_40.json  token_64.cashu
monexo-wallet/src/http/: reqwest.rs
monexo-wallet/src/localstore/: mod.rs  sqlite.rs
src/: amount.rs  cli.rs  config.rs  config_path.rs  dhke.rs  error.rs  lib.rs  mint.rs  model.rs  primitives.rs  proof.rs  secret.rs  server.rs  token.rs  wallet.rs
src/client/: crossplatform.rs  mod.rs
src/database/: mod.rs  postgres.rs
src/fixtures/: post_swap_request_64_20.json  pub_keys.json  token_60.cashu  token_invalid.cashu  token_nut_example.cashu
src/http/: reqwest.rs
src/localstore/: mod.rs  sqlite.rs
src/routes/: btconchain.rs  default.rs  mod.rs
