[package]
name = "monexo-mint"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "monexo-mint"
path = "src/bin/monexo-mint.rs"

[lib]
name = "monexomint"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-trait = { workspace = true }
axum = { workspace = true, features = ["http2"] }
clap = { workspace = true, features = ["env", "derive"] }
chrono = { workspace = true }
dotenvy = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true }
monexo-core = { path = "../monexo-core", version = "0.2.1" }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
uuid = { workspace = true, features = ["serde", "v4"] }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "migrate", "macros", "uuid"] }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors", "fs", "set-header"] }
thiserror = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
pretty_assertions = { workspace = true }
tower = { workspace = true, features = ["util"] }
