[workspace]
resolver = "2"

members = [
    "monexo-cli",
    "monexo-core",
    "monexo-mint",
    "monexo-wallet"
]

[workspace.dependencies]
anyhow = "1.0.94"
async-trait = "0.1.80"
axum = "0.7.9"
base64 = "0.22.1"
bip32 = "0.5.1"
bip39 = "2.0.0"
chrono = "0.4.39"
clap = "4.5.23"
console = "0.15.8"
dialoguer = "0.11.0"
dirs = "5.0.1"
dotenvy = "0.15.7"
hex = "0.4.3"
hyper = "1"
indicatif = "0.17.9"
itertools = "0.13.0"
mockall = "0.13.1"
num-format = "0.4.4"
pretty_assertions = "1.4.0"
qrcode = "0.14.0"
rand = "0.8.5"
serde = "1.0.216"
serde_json = "1.0.133"
serde_with = "3.11.0"
secp256k1 = { version = "0.29.0", default-features = false }
solana-sdk = "2.2.1"
solana-client = "2.2.0"
solana-transaction-status-client-types = "2.2.0"
solana-transaction-status = "2.2.0"
spl-associated-token-account = "3.0.2"
spl-token = "4.0.0"
sqlx = { version = "0.8.2", default-features = false }
opentelemetry = "0.22.0"
opentelemetry-otlp = "0.15.0"
opentelemetry_sdk = "0.22.1"
reqwest = { version = "0.12.9", default-features = false }
thiserror = "2.0.7"
tokio = "1.42.0"
tower = "0.5.2"
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = "0.3.18"
testcontainers = "0.23.1"
testcontainers-modules = "0.11.4"
tower-http = "0.6.2"
url = "2.5.4"
utoipa = "5.2.0"
utoipa-swagger-ui = "8.0.3"
uuid = "1"

[profile.dev.package]
secp256k1 = { opt-level = 3 }
secp256k1-sys = { opt-level = 3 }
bitcoin_hashes = { opt-level = 3 }
