[package]
name = "monexo-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library for building applications for the ecash protocol"

[lib]
name = "monexo_core"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bitcoin_hashes = "0.14.0"
hex = { workspace = true }
itertools = { workspace = true }
secp256k1 = { workspace = true, default-features = true, features = [
    "rand",
    "serde",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
criterion = "0.5.1"
